Stop `.container` from collapsing with minimal content and `display: flex;` parent

--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -12,7 +12,6 @@
 // 100% width for fluid, full width layouts.
 @if $enable-grid-classes {
     .container-fluid {
-        width: 100%;
         @include make-container();
     }
 }
