--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -3,6 +3,7 @@
 
 // Containers
 @mixin make-container($gutters: $grid-gutter-widths) {
+    width: 100%;  // Prevent too narrow
     max-width: 100%; // Prevent too wide
     margin-right: auto;
     margin-left: auto;
@@ -22,7 +23,7 @@
 @mixin make-container-max-widths($max-widths: $container-max-widths, $breakpoints: $grid-breakpoints) {
     @each $breakpoint, $container-max-width in $max-widths {
         @include media-breakpoint-up($breakpoint, $breakpoints) {
-            width: $container-max-width;
+            max-width: $container-max-width;
         }
     }
 }
